resources/api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: dad-jokes-api
  name: api-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dad-jokes-api
  template:
    metadata:
      labels:
        app: dad-jokes-api
    spec:
      containers:
      - image: ghcr.io/soyokaze-42/dad-jokes-api:latest
        name: dad-jokes-api
        ports:
        - containerPort: 3000
        volumeMounts:
        - name: annoying-vol-that-should-be-a-string
          mountPath: "/run/secrets/dadabase"
          readOnly: true
        livenessProbe:
          httpGet:
            path: /health
            port: 3000
          initialDelaySeconds: 15 # Wait 15s before starting probes
          periodSeconds: 10       # How often to check
          timeoutSeconds: 1      # Max time to wait for a response
          failureThreshold: 3    # Restart after 3 failed attempts

      volumes:
      - name: annoying-vol-that-should-be-a-string
        secret:
          secretName: joke-cluster-app
