resources/api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api
  labels:
    app: dad-jokes-api
spec:
  ports:
  - protocol: TCP
    port: 3000
    targetPort: 3000
  selector:
    app: dad-jokes-api
