resources/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dad-jokes-frontend
  labels:
    app: dad-jokes-frontend
spec:
  ports:
  - port: 8080
  selector:
    app: dad-jokes-frontend
