resources/frontend-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: dad-jokes-frontend
spec:
  port:
    targetPort: 8080
  tls:
    termination: edge
  to:
    kind: Service
    name: dad-jokes-frontend
    weight: 100
